fix: resizable container handler overlap with children

--- a/src/output.css
+++ b/src/output.css
@@ -600,14 +600,6 @@ video {
   position: relative;
 }
 
-.-left-1 {
-  left: -0.25rem;
-}
-
-.-right-1 {
-  right: -0.25rem;
-}
-
 .bottom-full {
   bottom: 100%;
 }
@@ -624,6 +616,10 @@ video {
   left: 100%;
 }
 
+.right-0 {
+  right: 0px;
+}
+
 .right-full {
   right: 100%;
 }
@@ -638,26 +634,6 @@ video {
 
 .top-full {
   top: 100%;
-}
-
-.-right-2 {
-  right: -0.5rem;
-}
-
-.-left-2 {
-  left: -0.5rem;
-}
-
-.-right-0 {
-  right: -0px;
-}
-
-.-left-0 {
-  left: -0px;
-}
-
-.right-0 {
-  right: 0px;
 }
 
 .z-50 {
@@ -848,6 +824,22 @@ video {
 
 .pl-1 {
   padding-left: 0.25rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.pr-4 {
+  padding-right: 1rem;
 }
 
 .text-left {
